trunk/Archive2/c2/ef8dc8777df00e/main.cpp
#include <vector>

int main()
{
    std::vector<std::vector<int>> array(2, 3);
    return 0;
}